# daily-contribution-automation

./: database.py  mock_data.json  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: trigger-entry.yml
api/: index.py
api/routers/: endpoints.py  views.py
config/: settings.py
models/: api_payload_model.py  app_contribution_model.py  skilltap_execution_result_model.py
repository/: base_repository.py
service/: contribution_config_service.py  contribution_entries_service.py  entry_app_service.py
templates/: bulk_entry.html  config_contribution.html  dashboard.html
